--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "claude-dev",
-	"displayName": "Cline",
+	"name": "cline-fork-ollamacpu",
+	"displayName": "Cline_OllamaCPU",
 	"description": "Autonomous coding agent right in your IDE, capable of creating/editing files, running commands, using the browser, and more with your permission every step of the way.",
 	"version": "3.42.0",
 	"icon": "assets/icons/icon.png",
